--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
 				</div>
 			</li>
 			<li class="row end js-row">
-				<h3 class="row-label player-1">English crown</h3>
+				<h3 class="row-label player-1">English Crown</h3>
 				<div class="counter">
 					<label for="player-1-crowns">Player 1</label>
 					<button class="js-decrement" data-row="9" data-player="1" tabindex="-1">&ndash;</button>
